<resources>
    <string name="app_name">BenyqWanAndroid</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="collection">收藏</string>
    <string name="wechat_subscription">微信公众号</string>
    <string name="to_do">TODO</string>
    <string name="logout">退出</string>
    <string name="about">关于</string>
    <string name="nav_main_navigation">导航</string>

    <string name="nav_main_home">首页</string>
    <string name="nav_main_project">项目</string>


    <string name="base_api">http://www.wanandroid.com/</string>


</resources>
